[package]
name = "crash"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
futures = "0.3.28"
hyper = { version = "0.14.26", features = ["client", "http1", "http2", "tcp"] }
hyper-rustls = { version = "0.24.0", features = ["http2"] }
rustls = "0.21.1"
rustls-native-certs = "0.6.2"
tokio = { version = "1.28.1", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
