[package]
name = "crash"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
bytes = "1.4.0"
color-eyre = "0.6.2"
enum-repr = "0.2.6"
enumflags2 = "0.7.7"
futures = "0.3.28"
http = "0.2.9"
nom = "7.1.3"
rustls = "0.21.1"
rustls-native-certs = "0.6.2"
tokio = { version = "1.28.1", features = ["full"] }
tokio-rustls = "0.24.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
